--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react-collapse": "^5.0.1",
     "@webpack-cli/generators": "^3.0.1",
     "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
